[project]
name = "classification-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "ruff>=0.13.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
